arc42 und Umbau weg von postgres auf eine BYOV mechanik mit vault
